<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TPhaseFilling" Id="{d8fe84da-a756-4daa-bbc7-f7b559a33ec2}">
    <Declaration><![CDATA[TYPE TPhaseFilling :
STRUCT
	Cmd : TPhaseCmd;
	State : TPhaseState;
	
	ParamFillLevel : REAL;
	WaterLevel : REAL;
END_STRUCT
END_TYPE

]]></Declaration>
  </DUT>
</TcPlcObject>